1. Added a preProcessor and post-processor for every config update, basis namespace, configName and configEvent 2. Bug Fix : AS Repository wasn't saving namespace and config bins. Fixed it